// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CustomerSelector Component matches snapshot when loading 1`] = `
<div
  data-testid="customer-selector"
>
  <h2>
    Customer Selector
  </h2>
  <div
    data-testid="customers-count"
  >
    Customers: 
    2
  </div>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
  <button
    data-testid="select-button"
  >
    Select Customer
  </button>
  <button
    data-testid="create-button"
  >
    Create New Customer
  </button>
  <div
    data-testid="customers-list"
  >
    <div
      data-testid="customer-0"
    >
      John
       
      Doe
       - 
      john@example.com
    </div>
    <div
      data-testid="customer-1"
    >
      Jane
       
      Smith
       - 
      jane@example.com
    </div>
  </div>
</div>
`;

exports[`CustomerSelector Component matches snapshot with empty customers list 1`] = `
<div
  data-testid="customer-selector"
>
  <h2>
    Customer Selector
  </h2>
  <div
    data-testid="customers-count"
  >
    Customers: 
    0
  </div>
  <button
    data-testid="select-button"
  >
    Select Customer
  </button>
  <button
    data-testid="create-button"
  >
    Create New Customer
  </button>
  <div
    data-testid="customers-list"
  />
</div>
`;

exports[`CustomerSelector Component matches snapshot with many customers 1`] = `
<div
  data-testid="customer-selector"
>
  <h2>
    Customer Selector
  </h2>
  <div
    data-testid="customers-count"
  >
    Customers: 
    10
  </div>
  <button
    data-testid="select-button"
  >
    Select Customer
  </button>
  <button
    data-testid="create-button"
  >
    Create New Customer
  </button>
  <div
    data-testid="customers-list"
  >
    <div
      data-testid="customer-0"
    >
      Customer
       
      0
       - 
      customer0@example.com
    </div>
    <div
      data-testid="customer-1"
    >
      Customer
       
      1
       - 
      customer1@example.com
    </div>
    <div
      data-testid="customer-2"
    >
      Customer
       
      2
       - 
      customer2@example.com
    </div>
    <div
      data-testid="customer-3"
    >
      Customer
       
      3
       - 
      customer3@example.com
    </div>
    <div
      data-testid="customer-4"
    >
      Customer
       
      4
       - 
      customer4@example.com
    </div>
    <div
      data-testid="customer-5"
    >
      Customer
       
      5
       - 
      customer5@example.com
    </div>
    <div
      data-testid="customer-6"
    >
      Customer
       
      6
       - 
      customer6@example.com
    </div>
    <div
      data-testid="customer-7"
    >
      Customer
       
      7
       - 
      customer7@example.com
    </div>
    <div
      data-testid="customer-8"
    >
      Customer
       
      8
       - 
      customer8@example.com
    </div>
    <div
      data-testid="customer-9"
    >
      Customer
       
      9
       - 
      customer9@example.com
    </div>
  </div>
</div>
`;

exports[`CustomerSelector Component matches snapshot with selected customer 1`] = `
<div
  data-testid="customer-selector"
>
  <h2>
    Customer Selector
  </h2>
  <div
    data-testid="customers-count"
  >
    Customers: 
    2
  </div>
  <div
    data-testid="selected-customer"
  >
    Selected: 
    customer-1
  </div>
  <button
    data-testid="select-button"
  >
    Select Customer
  </button>
  <button
    data-testid="create-button"
  >
    Create New Customer
  </button>
  <div
    data-testid="customers-list"
  >
    <div
      data-testid="customer-0"
    >
      John
       
      Doe
       - 
      john@example.com
    </div>
    <div
      data-testid="customer-1"
    >
      Jane
       
      Smith
       - 
      jane@example.com
    </div>
  </div>
</div>
`;

exports[`CustomerSelector Component renders customer selector component 1`] = `
<div
  data-testid="customer-selector"
>
  <h2>
    Customer Selector
  </h2>
  <div
    data-testid="customers-count"
  >
    Customers: 
    2
  </div>
  <button
    data-testid="select-button"
  >
    Select Customer
  </button>
  <button
    data-testid="create-button"
  >
    Create New Customer
  </button>
  <div
    data-testid="customers-list"
  >
    <div
      data-testid="customer-0"
    >
      John
       
      Doe
       - 
      john@example.com
    </div>
    <div
      data-testid="customer-1"
    >
      Jane
       
      Smith
       - 
      jane@example.com
    </div>
  </div>
</div>
`;
